# hermes-formatter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  verify.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: demo_agent.py  discord_webhook_example.py  telegram_bot_example.py
hermes_formatter/: __init__.py  formatter.py  utils.py
hermes_formatter/adapters/: __init__.py  base.py  cli.py  discord.py  email.py  generic.py  slack.py  telegram.py
hermes_formatter/rules/: __init__.py  code.py  emoji.py  emphasis.py  url.py
tests/: test_adapters.py  test_formatter.py  test_rules.py
