[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-formatter"
version = "0.1.1"
description = "Universal formatter for Hermes agent messages across Telegram, Discord, Slack, CLI, and Email"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent", email = "hermes@example.com"}
]
keywords = [
    "hermes",
    "agent",
    "formatter",
    "telegram",
    "discord",
    "slack",
    "markdown",
    "cli",
    "email",
    "universal"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    # Rich is optional (CLI colors improvement), not strictly required
    # "rich>=10.0.0",  # commented; users install if they want
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
rich = ["rich>=10.0.0"]

[project.urls]
Homepage = "https://github.com/yourname/hermes-formatter"
Repository = "https://github.com/yourname/hermes-formatter.git"
Issues = "https://github.com/yourname/hermes-formatter/issues"
Changelog = "https://github.com/yourname/hermes-formatter/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_formatter*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
